--- a/index.html
+++ b/index.html
@@ -7,44 +7,72 @@
     <title>Home - GameMania</title>
     <link rel="Stylesheet" type="text/css" href="css/style.css">
     <link rel="Stylesheet" type="text/css" href="bootstrap/bootstrap-5.0.0-beta2/dist/css/bootstrap.min.js">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="logo" href="img/logo.png" type="image/png" sizes="225x225">
 </head>
 <body>
     <header>
-        <div class="container-grid">
+        <div class="container-grid container">
             <a href=""><img src="img/logo.png" alt="Logo" height="120px" width="150px"></a>
             <nav class="menu">
                 <a href="">Home</a>
                 <a href="">Notícias</a>
                 <a href="">Mobile</a>
                 <a href="">Campeonatos</a>
-                <a href="">Entrar</a>
             </nav>
+            <a href="" onclick="mostrarMenu()"><img class="barras" src="img/menubarras.png" alt=""></a>
+            <nav class="menu-entrar">
+                <a href="">Entrar</a>
+            </nav>        
         </div>
     </header>
     <div class="banner">
-        <a href=""><img src="img/banner1.png" alt="banner1"></a>
-        <a href=""><img src="img/banner2.png" alt="banner2"></a>
+        <div class="banner-img container">
+            <a href=""><img class="main-banner" src="img/banner1.png" alt="banner1"></a>
+            <a href=""><img class="banner-opicional" src="img/banner2.png" alt="banner2"></a>
+        </div>
     </div>
     <div class="noticias">
-        <div class="texto-news-noticias">
+        <div class="texto-news-noticias container">
             <h1>News</h1>
         </div>
-        <div class="texto-vermais-noticias">
-            <a href="">Ver Mais</a>
+        <div class="noticia-banner container">
+            <a href=""><img class="noticia1-banner" src="img/noticia1.png" alt="noticia1"></a>
+            <a href=""><img class="noticia2-banner" src="img/noticia2.png" alt="noticia2"></a>
+            <a href=""><img class="noticia3-banner" src="img/noticia3.png" alt="noticia3"></a>
         </div>
-        <div class="noticia-banner">
-            <a href=""><img src="img/noticia1.png" alt="noticia1"></a>
-            <a href=""><img src="img/noticia2.png" alt="noticia2"></a>
-            <a href=""><img src="img/noticia3.png" alt="noticia3"></a>
+        <div class="texto-vermais-noticias container">
+            <a href="">Ver Mais</a>
         </div>
     </div>
     <footer>
-        <div class="container-grid footer-menu">
-            <a href="">Pagina Inicial</a>
-            <a href="">Contato</a>
-            <a href="">Publicidade</a>
-            <a href="">Sobre</a>
+        <div class="links-footer">
+            <div class="container-grid footer-menu container">
+                <a href="">Pagina Inicial</a>
+                <a href="">Contato</a>
+                <a href="">Publicidade</a>
+                <a href="">Sobre</a>
+            </div>
+            <div class="footer-suporte-email container">
+                <h2>Gostaria de receber noticias em seu E-mail?</h2>
+                <form action="">
+                    <input id="campo-email" type="email" placeholder="E-Mail">
+                    <button class="enviar-email" onclick="enviarEmail()">Cadastrar</button>
+                </form>
+            </div>
+        </div>
     </footer>
+    <script>
+        let menu = document.getElementById("menu")
+        function mostrarMenu(){
+            if(menu.style.display != "flex"){
+                menu.style.display = "flex"
+            }else{
+                menu.style.display = "none"
+            }
+        }
+    </script>
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
