--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="logo" href="img/logo.png" type="image/png" sizes="225x225">
 </head>
-<body>
+<body onload="renderizarNoticias()">
     <header>
         <div class="container-grid container">
             <a href=""><img src="img/logo.png" alt="Logo" height="120px" width="150px"></a>
@@ -36,22 +36,22 @@
         <div class="texto-news-noticias container">
             <h1>News</h1>
         </div>
-        <div class="espaco-noticia-banner container">
-            <div class="card-noticias">
-                <img class="noticia1-banner" src="img/noticias1.jpg" alt="noticia1">
+        <div id="espaco-noticia" class="espaco-noticia-banner container">
+            <!-- <div class="card-noticias">
+                <img src="img/noticias1.jpg" alt="noticia">
                 <h5>Título da notícia</h3>
                 <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
             </div>
             <div class="card-noticias">
-                <img class="noticia2-banner" src="img/noticias2.jpg" alt="noticia2">
+                <img src="img/noticias2.jpg" alt="noticia">
                 <h5>Título da notícia</h3>
                 <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
             </div>
             <div class="card-noticias">
-                <img class="noticia3-banner" src="img/noticias3.jpg" alt="noticia3">
-                <h5 class="noticia3-h5">Título da notícia</h3>
-                <p class="noticia3-p">Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
-            </div>
+                <img src="img/noticias3.jpg" alt="noticia">
+                <h5>Título da notícia</h3>
+                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
+            </div> -->
         </div>
         <div class="texto-vermais-noticias container">
             <a href="">Ver Mais</a>
