--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 </head>
 <body onload="renderizarNoticias()">
     <header>
-        <div class="container-grid container">
-            <a href=""><img src="img/logo.png" alt="Logo" height="120px" width="150px"></a>
-            <nav class="menu">
-                <a href="">Home</a>
-                <a href="">Notícias</a>
-                <a href="">Mobile</a>
-                <a href="">Campeonatos</a>
+        <div class="container-grid posicionamento-header container">
+            <a href="" class="logo"><img src="img/logo.png" alt="Logo" height="120px" width="150px"></a>
+            <nav id="menu" class="menu">
+                    <a href="">Home</a>
+                    <a href="">Notícias</a>
+                    <a href="">Mobile</a>
+                    <a href="">Campeonatos</a>
+                    <a href="" class="menu-entrar">Entrar</a>
             </nav>
-            <nav class="menu-entrar">
-                <a href="">Entrar</a>
-            </nav>        
-            <a href="" onclick="mostrarMenu()"><img class="barras" src="img/menubarras.png" alt=""></a>
+            <!-- <a href="#" onClick="mostrarMenu()"><img class="barras" src="img/menubarras.png" alt=""></a> -->
+            <a href="#" id="barras"><img id="barras" class="barras" src="img/menubarras.png" alt=""></a>
         </div>
     </header>
     <div class="banner">
-        <div class="banner-img container">
-            <a href=""><img class="main-banner" src="img/banner1.png" alt="banner1"></a>
-            <a href=""><img class="banner-opicional" src="img/banner2.png" alt="banner2"></a>
+        <div id="carrosel" class="banner-img container">
+            <img class="main-banner" src="img/banner1.png" alt="banner1"></a>
+            <img class="banner-opicional" src="img/banner2.png" alt="banner2"></a>
+            <img src="img/banner3.png" alt="banner3">
+            <img src="img/banner4.png" alt="banner4">
         </div>
     </div>
     <div class="noticias">
@@ -40,17 +41,20 @@
             <!-- <div class="card-noticias">
                 <img src="img/noticias1.jpg" alt="noticia">
                 <h5>Título da notícia</h3>
-                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
+                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos
+                     os recursos funcionais envolvidos.</p>
             </div>
             <div class="card-noticias">
                 <img src="img/noticias2.jpg" alt="noticia">
                 <h5>Título da notícia</h3>
-                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
+                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos
+                     os recursos funcionais envolvidos.</p>
             </div>
             <div class="card-noticias">
                 <img src="img/noticias3.jpg" alt="noticia">
                 <h5>Título da notícia</h3>
-                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos os recursos funcionais envolvidos.</p>
+                <p>Não obstante, a consolidação das estruturas deve passar por modificações independentemente de todos
+                     os recursos funcionais envolvidos.</p>
             </div> -->
         </div>
         <div class="texto-vermais-noticias container">
@@ -75,7 +79,7 @@
         </div>
     </footer>
     <script>
-        let menu = document.getElementById("menu")
+        let menu = document.getElementById("menu");
         function mostrarMenu(){
             if(menu.style.display != "flex"){
                 menu.style.display = "flex"
@@ -84,6 +88,7 @@
             }
         }
     </script>
+    <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
