--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="container-grid posicionamento-header container">
             <a href="" class="logo"><img src="img/logo.png" alt="Logo" height="120px" width="150px"></a>
             <nav id="menu" class="menu">
-                    <a href="">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="">Notícias</a>
                     <a href="">Mobile</a>
                     <a href="">Campeonatos</a>
-                    <a href="" class="menu-entrar">Entrar</a>
+                    <a href="login.html" class="menu-entrar">Entrar</a>
             </nav>
             <!-- <a href="#" onClick="mostrarMenu()"><img class="barras" src="img/menubarras.png" alt=""></a> -->
             <a href="#" id="barras"><img id="barras" class="barras" src="img/menubarras.png" alt=""></a>
@@ -79,14 +79,14 @@
         </div>
     </footer>
     <script>
-        let menu = document.getElementById("menu");
-        function mostrarMenu(){
-            if(menu.style.display != "flex"){
-                menu.style.display = "flex"
-            }else{
-                menu.style.display = "none"
-            }
-        }
+        // let menu = document.getElementById("menu");
+        // function mostrarMenu(){
+        //     if(menu.style.display != "flex"){
+        //         menu.style.display = "flex"
+        //     }else{
+        //         menu.style.display = "none"
+        //     }
+        // }
     </script>
     <script src="js/jquery-3.6.0.js"></script>
     <script src="js/scripts.js"></script>
