--- a/registro.html
+++ b/registro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - GameMania</title>
+    <title>Registro - GameMania</title>
     <link rel="Stylesheet" type="text/css" href="css/style.css">
     <link rel="Stylesheet" type="text/css" href="bootstrap/bootstrap-5.0.0-beta2/dist/css/bootstrap.min.js">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -23,23 +23,39 @@
             </nav>
         </div>
     </header>
-    <div class="login-background">
-        <form id="formulario-login">
-            <div class="login-container">
-                <div class="login-box">
-                    <label for="user">Usuário</label>
-                    <input id="user" name="user" type="text" placeholder="Digite seu Usuário">
+    <div class="registro-background">
+        <form id="formulario-registro">
+            <div class="registro-container">
+                <div class="email-box">
+                    <label for="email">E-mail*</label>
+                    <input id="email" name="email" type="email" placeholder="Digite seu E-mail">
                 </div>
-                <div class="password-login-box">
-                    <label for="password-login">Senha</label>
-                    <input id="password-login" name="password-login" type="password" placeholder="Digite sua senha">
+                <div class="confirmacao-email-box">
+                    <label for="email-confirmacao">Confirmação do E-mail*</label>
+                    <input id="email-confirmacao" name="email-confirmacao" type="email" placeholder="Digite seu E-mail">
+                </div>
+                <div class="meia-box">
+                    <label for="nome">Nome*</label>
+                    <input id="nome" name="nome" type="text" placeholder="Digite seu nome">
+                </div>
+                <div class="meia-box">
+                    <label for="sobrenome">Sobrenome*</label>
+                    <input id="sobrenome" name="sobrenome" type="text" placeholder="Digite seu sobrenome">
+                </div>
+                <div class="meia-box">
+                    <label for="senha">Senha*</label>
+                    <input id="senha" name="senha" type="password" placeholder="Digite sua senha">
+                </div>
+                <div class="meia-box">
+                    <label for="confirmacao-senha">Confirmação de senha*</label>
+                    <input id="confirmacao-senha" name="confirmacao-senha" type="password" placeholder="Digite sua senha">
+                </div>
+                    <div class="check-box">
+                    <input id="agreement" name="agreement" type="checkbox">
+                    <label for="agreement" id="agreement-label">Eu li e aceito os <a href="#">termos de uso.</a>*</label>
                 </div>
                 <div>
-                    <input id="confirmacao-login" type="submit" value="Entrar" onclick="validarLogin()">
-                </div>
-                <p class="novo-registro">Novo no site?</p>
-                <div>
-                    <a href="registro.html" class="botao-registro">Clique aqui para se registrar</a>
+                    <input id="confirmacao-botao" type="submit" value="Registrar" onclick="validarRegistro()">
                 </div>
             </div>
         </form>
